--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_messaging: ^14.9.4
   fl_chart: ^0.68.0
   timeago: ^3.6.1 # Added timeago package
+  animated_text_kit: ^4.3.0
 
 dev_dependencies:
   flutter_test:
